inconsistencias de estilos solucionadas en un 70%

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -31,6 +31,7 @@
 @import './adminClinica/tutorProfile';
 @import './adminClinica/verTutores';
 @import './adminClinica/agenda.scss';
+@import './adminClinica/groomingAgenda';
 @import './adminClinica/pacienteProfile';
 @import './adminClinica/verPacientes';
 @import './adminClinica/monitorVencimientos';
